# metal-q

./: .gitignore  Cargo.toml  LICENSE  MetalKernels.metallib  pyproject.toml  readme.md  verfiy_old.py
benchmarks/: bench.py
docs/: API.md  adjoint_method.md
metal_quantum_native/: Cargo.toml  build.rs
metal_quantum_native/src/: gates.rs  gradient.rs  hamiltonian.rs  lib.rs  metal_backend.rs  sampler.rs  simulator.rs
metalq/: __init__.py  _ffi.py  circuit.py  gate.py  hamiltonian.py  pyvenv.cfg  result.py  runner.py
metalq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
metalq/torch/: function.py  layer.py
shaders/: gates.metal  gradient.metal  two_qubit.metal
tests/: test_gates.py
tgv/: classical.py  exact.py  grid.py  metrics.py
