[package]
name = "metal_quantum_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "metalq_native"
crate-type = ["cdylib"]

[dependencies]
metal       = "0.29"
objc        = "0.2"
libc        = "0.2"
num-complex = "0.4"
bytemuck    = "1.14"
thiserror   = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto       = true